fix mobile menu spacing

--- a/themes/geometric/styles/global.less
+++ b/themes/geometric/styles/global.less
@@ -339,6 +339,7 @@ body .navbar li.dropdown b.caret{
 
 body .navbar-toggle{
 	border-radius: 0;
+  	margin-right: 0;
   	border-color: #f8f8f8 !important;
 }
 
